versao desktop concluida

--- a/ProjetoPortFlow.html
+++ b/ProjetoPortFlow.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div class="logo">
-        <h1>Portflow</h1>
+            <h1>Portflow</h1>
+            <img class="botao-logo" src="botao hamburguer.png" alt="hamburguer">
         </div>
         <nav>
             <ul>
@@ -25,7 +26,7 @@
     <main>
         <section class="palavras">
             
-            <h2>Imagine, Discuta, Desenhe</h2>
+            <h2>Imagine, Discuta, Desenhe.</h2>
             <h3>FALE CONOSCO</h3>
             <div class="laranja">
                 <img class="fruta" src="laranja azul.png" alt="laranjaazul">
@@ -53,4 +54,22 @@
             </section>  
     </main>
 </body>
+<footer>
+    <section class="redessociais">
+        <section class="rodape">
+            <img class="contato" src="facebook icons.com_65484.png" alt="facebook">
+            <img class="contato" src="twitter.png" alt="twitter">
+            <img class="contato" src="instagram.png" alt="instagram">
+            <img class="contato" src="direct.png" alt="direct">
+            <img class="contato" src="whatsapp.png" alt="whatsapp">
+            <img class="contato" src="youtube.png" alt="youtube">
+        </section
+        <span><div class="c">Copyright</div></span>
+        <div class="l">
+            <h4>Layout produzido por Vai na Web para fins exclusivamente educacionais.</h4> 
+            <h4>Referência: https://br.pinterest.com/pin/464644886562510864/</h4>
+        </div>
+    </section>
+    <a id="link-topo" href="#">&#9650;</a>
+</footer>
 </html>
