C passou por aqui

--- a/index.html
+++ b/index.html
@@ -9,49 +9,45 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <section class="h-container">
             <h1>Portflow</h1>
             <img class="botao-logo" src="botao hamburguer.png" alt="hamburguer">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#"></a>Home</a></li>
-                <li><a href="#"></a>Blog</a></li>
-                <li><a href="#"></a>Valores</a></li>
-                <li><a href="#"></a>Portifólio</a></li>
-                <li><a href="#"></a>Contato</a></li>
-            </ul>
-        </nav>
+            <nav class="h-nav">
+                <ul>
+                    <li><a href="#"></a>Home</a></li>
+                    <li><a href="#"></a>Blog</a></li>
+                    <li><a href="#"></a>Valores</a></li>
+                    <li><a href="#"></a>Portifólio</a></li>
+                    <li><a href="#"></a>Contato</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main>
         <section class="palavras">
-            
             <h2>Imagine, Discuta, Desenhe.</h2>
-            <h3>FALE CONOSCO</h3>
-            <div class="laranja">
-                <img class="fruta" src="laranja azul.png" alt="laranjaazul">
-            </div>
+            <p>FALE CONOSCO</p>
         </section>
-            <section class="relatoriosimg">
-                <section class="catalogodeimg">  
-                   <img class="imgdamain" src="matte.png" alt="matte">
-                   <img class="imgdamain" src="pao de queijo.png" alt="pao">
-                   <img class="imgdamain" src="pote.png" alt="pote">
-                   <img class="imgdamain" src="pc.png" alt="pc">
-                </section>
-                <section class="catalogodeimg">
-                    <img class="imgdamain" src="nopath.png" alt="nopath">
-                    <img class="imgdamain" src="caneca.png" alt="caneca">
-                    <img class="imgdamain" src="desk.png" alt="desk">
-                    <img class="imgdamain" src="barrinha.png" alt="barrinha">
-                </section>
-                <section class="catalogodeimg">
-                    <img class="imgdamain" src="cell.png" alt="cel">
-                    <img class="imgdamain" src="tablet.png" alt="cafe">
-                    <img class="imgdamain" src="foto.png" alt="foto">
-                    <img class="imgdamain" src="cartao postal.png" alt="cartao">
-                </section>
-            </section>  
+        <section class="relatoriosimg">
+            <section class="catalogodeimg">  
+                <img class="imgdamain" src="matte.png" alt="matte">
+                <img class="imgdamain" src="pao de queijo.png" alt="pao">
+                <img class="imgdamain" src="pote.png" alt="pote">
+                <img class="imgdamain" src="pc.png" alt="pc">
+            </section>
+            <section class="catalogodeimg">
+                <img class="imgdamain" src="nopath.png" alt="nopath">
+                <img class="imgdamain" src="caneca.png" alt="caneca">
+                <img class="imgdamain" src="desk.png" alt="desk">
+                <img class="imgdamain" src="barrinha.png" alt="barrinha">
+            </section>
+            <section class="catalogodeimg">
+                <img class="imgdamain" src="cell.png" alt="cel">
+                <img class="imgdamain" src="tablet.png" alt="cafe">
+                <img class="imgdamain" src="foto.png" alt="foto">
+                <img class="imgdamain" src="cartao postal.png" alt="cartao">
+            </section>
+        </section>  
     </main>
 <footer>
     <section class="redessociais">
@@ -62,11 +58,14 @@
             <img class="contato" src="direct.png" alt="direct">
             <img class="contato" src="whatsapp.png" alt="whatsapp">
             <img class="contato" src="youtube.png" alt="youtube">
-        </section
-        <span><div class="c">Copyright</div></span>
-        <div class="l">
-            <h4>Layout produzido por Vai na Web para fins exclusivamente educacionais.</h4> 
-            <h4>Referência: https://br.pinterest.com/pin/464644886562510864/</h4>
+        </section>
+        <div class="copy">
+            <div class="f-txt">
+                <p>Copyright:</p>
+                <h4>Layout produzido por Vai na Web para fins exclusivamente educacionais. Referência: https://br.pinterest.com/pin/464644886562510864/</h4>
+            </div>
+            <a href="#"><button class="footer-btn">Topo</button></a>
+            </div>
         </div>
     </section>
 </footer>
